# db-insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: android-chat-implementation.md
scripts/: create_local_sqlite.py
src/db_insight/: agent.py  cli.py  config.py  db.py  errors.py  mcp_server.py  memory.py  models.py  safety.py  tools.py
tests/: test_agent.py  test_config.py  test_memory.py  test_safety.py  test_sqlite.py  test_tools.py
