[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-insight"
version = "0.1.0"
description = "Chat with Postgres safely from your local machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.2.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "sqlglot>=25.0.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
db-insight = "db_insight.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/db_insight"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
